# video-transcriber

./: .cursorrules  .gitignore  README.md  audio_downloader.py  config.py  main.py  pyproject.toml  requirements.txt  text_processor.py  transcriber.py  user_interface.py
src/: config.py  text_processor.py  transcriber.py  user_interface.py  utils.py
